--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://www.joemoonwhitehead.com'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Joe Moon Whitehead'
 theme = 'ananke'
